[package]
name = "aoc-runner-derive"
version = "0.2.2"
authors = ["Grégory Obanos <gregory.obanos@gmail.com>"]
description = "Codegen for aoc-runner & others"
license = "MIT/Apache-2.0"
repository = "https://github.com/gobanos/aoc-runner-derive"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.11"
quote = "1.0.2"
proc-macro2 = "1.0.6"
aoc-runner-internal = "0.1.0"

[features]
default = ["syn/full"]
